api-server/v2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-app-server
  labels:
    app.kubernetes.io/name: app-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-server
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-server
        app.kubernetes.io/instance: release-name
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
      containers:
        - name: app-server
          securityContext:
            capabilities:
              drop:
              - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          image: "nginx:1.16.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
