api-server/v2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-app-server
  labels:
    app.kubernetes.io/name: app-server
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.16.0"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: app-server
    app.kubernetes.io/instance: release-name
